# fs25modmanager

./: .gitignore  LICENSE  NOTICE  README.md  index.html  package.json  pnpm-lock.yaml  renovate.json
.github/workflows/: ci.yml  release.yml
companion-mod/FS25_ScenarioCompanion/: README.md  icon.dds  modDesc.xml
companion-mod/FS25_ScenarioCompanion/scripts/: ScenarioCompanion.lua
scripts/: notarize.sh
src/: App.css  App.tsx  Disk.tsx  ModHub.tsx  Saves.tsx  Scenarios.tsx  api.ts  export.test.ts  export.ts  generator.ts  mapId.ts  presets.ts  recommendations.ts  rules.test.ts  rules.ts  scraper.test.ts  scraper.ts  updater.ts  updates.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  moddesc.rs
